refactor: FV-104 - refactor SanctionType enum